splash screen, refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,16 @@
         android:theme="@style/AppTheme">
 
         <!-- SplashScreen Activity -->
-        <activity android:name=".screens.SplashScreen"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        <activity android:name=".screens.ReminderScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <!-- MainPage Activity -->
-        <activity android:name=".screens.MainPage" android:exported="true"/>
-        <activity android:name=".screens.MainActivity" android:exported="true"/>
-        <activity android:name=".auth.Register" android:exported="true"/>
-        <!-- Notification Receiver -->
+        <activity android:name=".screens.LoginScreen" android:exported="true"/>
+        <activity android:name=".screens.RegisterScreen" android:exported="true"/>
         <receiver android:name=".helpers.NotifierAlarm" android:exported="true"/>
+
     </application>
 </manifest>
