--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
         android:theme="@style/AppTheme">
 
         <!-- SplashScreen Activity -->
-        <activity android:name=".screens.ReminderScreen"
+        <activity android:name=".arnav.screens.ReminderScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".screens.LoginScreen" android:exported="true"/>
-        <activity android:name=".screens.RegisterScreen" android:exported="true"/>
-        <activity android:name=".screens.ActivityLogger" android:exported="true"/>
-        <receiver android:name=".helpers.NotifierAlarm" android:exported="true"/>
+        <activity android:name=".arnav.screens.LoginScreen" android:exported="true"/>
+        <activity android:name=".arnav.screens.RegisterScreen" android:exported="true"/>
+        <activity android:name=".arnav.screens.ActivityLogger" android:exported="true"/>
+        <receiver android:name=".arnav.helpers.NotifierAlarm" android:exported="true"/>
 
     </application>
 </manifest>
