--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         <!-- SplashScreen Activity -->
         <activity android:name=".arnav.screens.ReminderScreen"
             android:exported="true" android:label="Reminder">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN"/>-->
+<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
+<!--            </intent-filter>-->
         </activity>
         <activity android:name=".arnav.screens.LoginScreen" android:exported="true"/>
         <activity android:name=".arnav.screens.RegisterScreen" android:exported="true"/>
@@ -36,6 +36,22 @@
         </activity>
         <activity android:name=".aakanksha_jobtracker.screens.AddJobActivity" android:label="Add Job"/>
         <activity android:name=".aakanksha_jobtracker.screens.EditJobActivity" android:label="Edit Job"/>
+        <activity
+            android:name=".chirag.DailyTaskTracker"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 </manifest>
